--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,3 +1,17 @@
 p {
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
+    color: white;
+    font-size: 1.5rem;
+
+}
+
+footer{
+    width: 100%;
+    margin-top: 10vh;
+    background-color: #333;
+    height: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
